--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "target": "es5",
     "declaration": true,
     "allowSyntheticDefaultImports": true,
+    "lib": ["es2015", "dom"],
     "esModuleInterop": true
   },
   "include": [
